# chaos

./: .gitignore
app/infra/py_infra/: CHANGELOG  README.md  pyproject.toml  setup.py
app/infra/py_infra/config/: loader.py  schema.py
app/infra/py_infra/core/: lifecycle.py
app/infra/py_infra/hooks/: after_shutdown.py  after_start.py  before_start.py
app/projects/artemis/: CHANGELOG  README.md  pyproject.toml  requirements.txt
app/projects/artemis/artemis/: __init__.py  main.py
app/projects/artemis/artemis.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
app/projects/artemis/config/: config-prod.yaml  config.yaml  task.yaml
app/projects/artemis/docs/: 2026-02-04 REFACTOR_TASK_UNIT_DESIGN.md  2026-04-01 FEATURE_APPLY_TASK_ORCHESTRATION_IN_BACKTRADING.md  2026-04-02 FEATURE_DOWNLOAD_ENGINE[UNFINISED].md  2026-04-02_0 FEATURE_STRATEGY_RESEARCH_WORKBENCH.md  2026-04-02_1 FEATURE_MARKET_DATA_AND_INDICATORS.md  2026-04-07 FEATURE_WORKBENCH_ENV_SWITCHING.md  2026-04-07 PROPOSAL_WORKBENCH_ENV_SWITCHING.md  2026-04-11 FEATURE_CACHE_ENGINE.md  2026-04-11 FEATURE_WORKBENCH_DATA_DIMENSION_SELECTION.md  2026-04-11 TEST_PLAN_CACHE_ENGINE.md  2026-04-13 REFACTOR_PLAN_WORKBENCH_DIMENSIONS_AND_PROVIDER_LAYER.md  2026-04-13 REVIEW_ARTEMIS_WORKBENCH_AND_CACHE.md  2026-04-13 TEST_PLAN_WORKBENCH_DIMENSIONS_AND_CONFIG.md  2026-04-15 BUGFIX_STOCK_ZH_A_HIST_FIELD_NAME_MISMATCH.md  2026-04-15 REVIEW_STRATEGY_ENGINE_ARCHITECTURE.md  2026-04-15 STRATEGY_ENGINE_STRATEGIES_GUIDE.md  2026-04-26 FINANCIAL_DATA_FIELDS.md  2026-05-07 FINANCIAL_DATA_PG_MIGRATION.md  2026-05-07 INCREMENTAL_DOWNLOAD_AND_SYMBOL_RESOLUTION.md  2026-05-07 INDUSTRY_DATA_ITERATION_PLAN.md  2026-05-08 [IMPLEMENTING] FEATURE_FUNDAMENTAL_FACTOR_ENGINE.md  2026-05-08 [PLANNING] FEATURE_FUNDAMENTAL_FACTOR_ENGINE.md  2026-05-08 [PLANNING] FEATURE_MARKET_REGIME_ENGINE.md  2026-05-08 [SUPERSEDED] FEATURE_FUNDAMENTAL_FACTOR_ENGINE.md  design.md  (+12 more)
app/projects/atlas/: CHANGELOG  README.md  pyproject.toml
(+1092 files in other folders)
