# pyproject.toml
[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyinfra"
version = "0.1.0"
description = "Python infrastructure components library"
dependencies = [
    "pydantic>=2.0.0",
    "PyYAML>=6.0",
]
requires-python = ">=3.8"