[project]
name = "artemis"
version = "0.1.0"
description = "Artemis multi-source data pull framework (phase 1)"
readme = "README.md"
authors = [{name = "Artemis Team"}]
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn>=0.23.0",
  "httpx>=0.25.0",
  "pydantic>=2.6.0",
  "PyYAML>=6.0.0",
  "python-dotenv>=1.0.0"
]

[project.optional-dependencies]
dev = ["pytest>=7.4.0", "pytest-asyncio>=0.21.0"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["artemis*"]
exclude = ["tests"]
